test/e2e/features/agentgateway/tracing/testdata/jaeger.yaml
# To view traces in jaeger UI:
# kubectl port-forward svc/tracing 16686:80
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  labels:
    app.kubernetes.io/name: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jaeger
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:1.56
          args:
            - "--collector.zipkin.host-port=:9411"
          ports:
            - containerPort: 16686
            - containerPort: 16685
            - containerPort: 14268
            - containerPort: 9411
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: zipkin
  name: zipkin
spec:
  ports:
    - port: 9411
      targetPort: 9411
      name: http-query
  selector:
    app.kubernetes.io/name: jaeger
---
apiVersion: v1
kind: Service
metadata:
  name: tracing
  labels:
    app.kubernetes.io/name: jaeger
spec:
  type: ClusterIP
  ports:
    - name: http-query
      port: 80
      protocol: TCP
      targetPort: 16686
    # Note: Change port name if you add '--query.grpc.tls.enabled=true'
    - name: grpc-query
      port: 16685
      protocol: TCP
      targetPort: 16685
    - name: zipkin
      port: 9411
      targetPort: 9411
  selector:
    app.kubernetes.io/name: jaeger
